# banking-fraud-detection-api

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml
src/: __init__.py
src/.envs/: .env.example
src/backend/: __init__.py
src/backend/app/: __init__.py  main.py
src/backend/app/api/: main.py
src/backend/app/core/: config.py  logging.py
src/backend/app/routes/: home.py
tests/: test_main.py
